@@ -1,3 +1,11 @@
+2022-09-17T02:01:38Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3071745766
+* notice: last 14d: unq all: 11 32
+* notice: prev accum: outdated-unq outdated-all / unq all: 592 2419 / 614 2451
+* notice: next accum: outdated-unq outdated-all / unq all: 593 2421 / 614 2453
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [2022-09-02] / [2022-09-16]
+
 2022-09-16T16:28:15Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3069308522
 * notice: last 14d: unq all: 11 32
